--- a/campaign/templates/app/leads/leads-view.html
+++ b/campaign/templates/app/leads/leads-view.html
@@ -5,9 +5,12 @@
 {% block content %}
 <div class="flex justify-between items-center mb-8 mt-8">
     <h1 class="text-3xl text-gray-900 mb-2">{% for list in lead_lists %}{% if list.id == lead_list_id %}{{ list.title }}{% endif %}{% endfor %}
-</h1>
+ List</h1>
     <div class="flex items-center gap-4">
-         <h1 class="text-2xl text-gray-400 mb-2">Lead List</h1>
+         <a href="/campaign/leads/lists/" tabindex="0" role="button" class="btn">
+            <i class="fa-regular fa-eye"></i>
+            View all lists
+    </a>
     </div>
   </div>
         <!-- Toolbar -->
