--- a/campaign/templates/app/leads/all-leads-view.html
+++ b/campaign/templates/app/leads/all-leads-view.html
@@ -65,8 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="{# url 'add_leads' lead_list_id #}" class="btn btn-primary btn-outline btn-square h-10 w-10 min-h-10" title="Import Leads"><i class="fa-solid fa-file-import"></i></a>
-                <a href="{# url 'add_leads' lead_list_id #}" class="btn btn-primary h-10 min-h-10 rounded-lg px-4 text-sm">Add Lead</a>
+                <a href="{% url 'leads_lists' %}" class="btn btn-primary h-10 min-h-10 rounded-lg px-4 text-sm">View all lists</a>
             </div>
         </div>
 
