--- a/campaign/templates/app/leads/leads-lists.html
+++ b/campaign/templates/app/leads/leads-lists.html
@@ -3,24 +3,31 @@
 {% block title %}Leads{% endblock %}
 
 {% block content %}
-<div class="p-4">
-  <div class="flex justify-between items-center mb-6">
-    <h1 class="text-2xl font-bold">Lead Lists</h1>
-    <div class="flex items-center gap-4">
+<div class="flex-1 flex flex-col overflow-hidden bg-gray-50 p-6">
 
-    <a href="{% url 'show_all_leads' %}" tabindex="0" role="button" class="btn">
-         <i class="fa-regular fa-eye"></i>
-        View all leads
-    </a>    
 
-    <button class="btn btn-primary" onclick="addNewLeadsList()">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
-        </svg>
-        New List
-      </button>
+  <!-- Header -->
+    <div class="mb-6">
+        <div class="flex justify-between items-center">
+            <div>
+                <h1 class="text-3xl font-bold text-gray-900 mb-2">Lead Lists</h1>
+                <p class="text-gray-600">Manage email templates and view performance analytics</p>
+            </div>
+            <div class="flex gap-2">
+                <a href="{% url 'show_all_leads' %}" tabindex="0" role="button" class="btn">
+                    <i class="fa-regular fa-eye"></i>
+                    View all leads
+                </a>    
+
+                <button class="btn btn-primary" onclick="addNewLeadsList()">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+                    </svg>
+                    New List
+                </button>
+            </div>
+        </div>
     </div>
-  </div>
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
