replaced with local cdn

--- a/campaign/templates/app/campaign/dashboard.html
+++ b/campaign/templates/app/campaign/dashboard.html
@@ -1,9 +1,10 @@
 {% extends "app/campaign/campaign-base.html" %}
+{% load static %}
 
 {% block title %}Campaign Dashboard{% endblock %}
 
 {% block js %}
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static 'cdn/chart.js' %}"></script>
 {% endblock %}
 
 
