--- a/campaign/templates/base.html
+++ b/campaign/templates/base.html
@@ -9,10 +9,10 @@
     <title>{% block title %}campaigns{% endblock %}</title>
 
     <!-- DaisyUI and Tailwind CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.2/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="{% static 'cdn/daisyui-4-12-2-full.css' %}" rel="stylesheet" type="text/css" />
+    <script src="{% static 'cdn/tailwindcss-3-4-16.js' %}"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js" integrity="sha384-t4DxZSyQK+0Uv4jzy5B0QyHyWQD2GFURUmxKMBVww9+e2EJ0ei/vCvv7+79z0fkr" crossorigin="anonymous"></script>
+    <script src="{% static 'cdn/htmx-2-0-5.min.js' %}" integrity="sha384-t4DxZSyQK+0Uv4jzy5B0QyHyWQD2GFURUmxKMBVww9+e2EJ0ei/vCvv7+79z0fkr" crossorigin="anonymous"></script>
     
     {% block js %}
     {% endblock %}
