added status field to the campaign and the delyed days to the message assigments and moved to postgress db

--- a/campaign/templates/app/campaign/add-new.html
+++ b/campaign/templates/app/campaign/add-new.html
@@ -176,7 +176,7 @@
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
-            'X-CSRFToken': getCookie('csrftoken')
+            'X-CSRFToken': '{{ csrf_token }}',
           },
           body: JSON.stringify(campaignData)
         });
